# DevNote

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  项目需求.md
docs/: QuickAddFeature.md  StatusBar.md  开发文档.md  数据库与前端数据结构文档.md  数据库操作API调用文档.md  项目需求.md
src/: App.vue  Workspace.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  quickadd.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: database.ts  project.ts  settings.ts
src/components/: AboutDialog.vue  MenuBar.vue  SettingsDialog.vue  StatusBar.vue  Workspace.vue
src/router/: index.ts
src/types/: index.ts
src/utils/: commandParser.ts  config.ts  dataSync.ts  statusBar.ts  windowManager.ts
src/views/: CommandWindow.vue  EditorWindow.vue
