[package]
name = "devnote"
version = "0.1.0"
description = "A Tauri App"
authors = ["zhley"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = { version = "2.0" }
tauri-plugin-dialog = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }
tauri-plugin-global-shortcut = { version = "2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
